# onegovernance-apollo

./: .doit.db.dir  .gitignore  Dockerfile  README.md  TODO.md  dodo.py  pyproject.toml  requirements.txt  temp_file_anonymized.txt
 .github/workflows/: val_2_onegovernance.yml  
.github/workflows/: main_apollo-test.yml  main_apollo13.yml  main_apollo13tmp.yml  val_2_onegovernance.yml
data/: metadata.docx
src/: chat.py  main.py  main_test.py  temp_file_projects_report.csv  test.py
src/Create_yearly/data/data_gen/: cleaned_project_data.csv  cleaned_project_data_full.csv  filled_projects.csv  projects_report copy.csv  projects_report.csv  yearly_by_part.csv  yearly_final.csv  yearly_final_1.csv  yearly_final_one.csv  yearly_final_r.csv  yearly_report.docx  yearly_summary.csv
src/Create_yearly/data/data_scrapped/: annualrewiew2022.csv  annualrewiew_template.csv  ikea_foundation_projects.csv  yearly_report_data.csv
src/Create_yearly/src/one_governance/: pipeline_scrapping.py  utils.py
src/Create_yearly/src/one_governance/GenAI/: Gen_full_class.py  gen_full.py
src/Create_yearly/src/one_governance/notebook/: Data_adding_page_1.ipynb  ikea_data_all_analysis.ipynb
src/Create_yearly/src/one_governance/scraper/: scrapping_ikea_project.py  scrapping_ikea_yearly.py  scrapping_pdf.py
src/apollo/: Anonymizer.py  Answering.py  RAG.py  Reformulator.py  VectorStore.py  chat.py  utils.py
